[gd_scene load_steps=2 format=3 uid="uid://4rqge53tyf4f"]

[ext_resource type="Script" path="res://joke/joke02.gd" id="1_c5cxy"]

[node name="Joke02" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c5cxy")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 69.0
offset_right = 319.0
offset_bottom = 92.0
text = "What is orange and sounds like a parrot?"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = 104.0
offset_right = 486.0
offset_bottom = 170.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Penguin" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "A penguin!"

[node name="Carrot" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "A carrot!"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Robin" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "A robin?"

[node name="Crush" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "The crushing realization that
 you will never be enough"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Penguin" to="." method="_on_fox_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Carrot" to="." method="_on_fast_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Robin" to="." method="_on_other_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Crush" to="." method="_on_idk_pressed"]
